# planck

./: .gitignore  CMakeLists.txt  README.md  planck.defaults
.github/workflows/: cmake-multi-platform.yml  msvc.yml
basis/: 3-21g-1.xml  3-21g-10.xml  3-21g-11.xml  3-21g-12.xml  3-21g-13.xml  3-21g-14.xml  3-21g-15.xml  3-21g-16.xml  3-21g-17.xml  3-21g-18.xml  3-21g-19.xml  3-21g-2.xml  3-21g-20.xml  3-21g-21.xml  3-21g-22.xml  3-21g-23.xml  3-21g-24.xml  3-21g-25.xml  3-21g-26.xml  3-21g-27.xml  3-21g-28.xml  3-21g-29.xml  3-21g-3.xml  3-21g-30.xml  3-21g-31.xml  3-21g-32.xml  3-21g-33.xml  3-21g-34.xml  3-21g-35.xml  3-21g-36.xml  3-21g-37.xml  3-21g-38.xml  3-21g-39.xml  3-21g-4.xml  3-21g-40.xml  3-21g-41.xml  3-21g-42.xml  3-21g-43.xml  3-21g-44.xml  3-21g-45.xml  (+124 more)
core/molecule/: geom.py
core/scf/rhf/: restricted.py
docs/: index.html  main.css
inputs/: benzene.planck  cyclohexane  cyclohexane.planck  ethane  ethane.planck  water  water.planck
src/: JobFile.xml  molecule.cpp  planck  planck.cpp  planck.sh  planck_main.cpp  scf.cpp  tables.h  water
src/auxiliary/: inputoutput.cpp  inputoutput.h  license.cpp  license.h  tables.cpp  tables.h
src/base/: planck_base.h  planck_basis.cpp  planck_basis.h  planck_io.cpp  planck_io.h  planck_scf.cpp  planck_scf.h  planck_scf_driver.cpp  planck_scf_driver.h  planck_symmetry.cpp  planck_symmetry.h  planck_tokenizer.cpp  planck_tokenizer.h
src/integrals/: planck_integrals.cpp  planck_integrals.h
src/integrals/helper/: planck_helper_routines.cpp  planck_helper_routines.h
src/integrals/hermite/: planck_hermite.cpp  planck_hermite.h
src/integrals/huzinaga/: planck_huzinaga.cpp  planck_huzinaga.h
src/integrals/obarasakia/: planck_obarasakia.cpp  planck_obarasakia.h
src/integrals/one_electron/: planck_overlap.cpp  planck_overlap.h
src/lookup/: planck_boys.cpp  planck_lookup.cpp  planck_lookup.h
src/math/: planck_math.cpp  planck_math.h
src/molecule/: molecule.cpp  molecule.h
src/scf/: JobFile.xml  overlap.h  scf.cpp  scf.h
tools/: compute_boys.py  gbs_xml_converter.py  generate_basis.py  prettify_xml.py  run.sh  test.xml  your_modified_file.xml
tools/basis/: def2-svp-1.xml
tools/basissets/: convert.bash  create_basis.awk  gbs_xml_converter.py
tools/basissets/6-311++gdp/: 6-311++g(d,p)-1.basis  6-311++g(d,p)-10.basis  6-311++g(d,p)-11.basis  6-311++g(d,p)-12.basis  6-311++g(d,p)-13.basis  6-311++g(d,p)-14.basis  6-311++g(d,p)-15.basis  6-311++g(d,p)-16.basis  6-311++g(d,p)-17.basis  6-311++g(d,p)-18.basis  6-311++g(d,p)-19.basis  6-311++g(d,p)-2.basis  6-311++g(d,p)-3.basis  6-311++g(d,p)-4.basis  6-311++g(d,p)-5.basis  6-311++g(d,p)-6.basis  6-311++g(d,p)-7.basis  6-311++g(d,p)-8.basis  6-311++g(d,p)-9.basis
utilities/: CMakeLists.txt  planck_formdump  planck_formdump.cpp  planck_formdump.h
